Closed Bug 196061 Opened 23 years ago Closed 22 years ago

Running process hangs uninstaller

Categories

(SeaMonkey :: Installer, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.4alpha

People

(Reporter: agracebush, Assigned: ssu0262)

Details

(Keywords: regression, Whiteboard: [adt1])

Attachments

(1 file, 1 obsolete file)

Both mozilla and buffy 3/5 nightlies steps: 1. enable QuickLaunch 2. run application 3. open task manager (view process running) 4. go to add/remove programs 5. choose to remove current application actual results: buffy: QuickLaunch icon is removed but process remains- uninstaller is hanging- no response from add/remove programs dialog. remove process and you are asked if you want to remove application- rest runs smoothly mozilla: systray icon is removed and user is prompted that a process is running- asked to close down and retry/cancel. Uninstaller continues when user quits process. expected results: uninstaller either quits the running process or warns user as mozilla does.
QA-> me
QA Contact: bugzilla → gbush
Installer triage team: nsbeta1+/adt1
Keywords: nsbeta1nsbeta1+
Whiteboard: [adt1]
Target Milestone: --- → mozilla1.4alpha
this bug is related to bug 190816. it's not the installer's or uninstaller's fault. Mozilla just isn't shutting down properly.
Attached patch patch v1.0 (obsolete) — Splinter Review
merged the relavent changes from bug 190816 to here.
Attached patch patch v1.1Splinter Review
udpated patch given review with sgehani
Attachment #122085 - Attachment is obsolete: true
Comment on attachment 122155 [details] [diff] [review] patch v1.1 got verbal r=sgehani
Attachment #122155 - Flags: superreview?(jaggernaut)
Attachment #122155 - Flags: review+
Comment on attachment 122155 [details] [diff] [review] patch v1.1 sr=jag
Attachment #122155 - Flags: superreview?(jaggernaut) → superreview+
Comment on attachment 122155 [details] [diff] [review] patch v1.1 similar fix as with bug 190816, but for the uninstaller. the risk to this is low since the fix to bug 190816 is working.
Attachment #122155 - Flags: approval1.4b?
Comment on attachment 122155 [details] [diff] [review] patch v1.1 a=sspitzer
Attachment #122155 - Flags: approval1.4b? → approval1.4b+
patch checked in.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
build 2003050104
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: