fixing bug 196061 - Running process hangs uninstaller. r=sgehani, sr=jag, a=sspitzer